--- a/ghost/package.json
+++ b/ghost/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "doc": "node ./src/scripts/doc.js"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.191",
     "http-proxy-middleware": "^2.0.6",
-    "node-sass": "^8.0.0"
+    "node-sass": "^8.0.0",
+    "ts-json-schema-generator": "^1.2.0"
   }
 }
