wip plugin tooks

--- a/server/ghost_data/plugins/youtube/manifest.json
+++ b/server/ghost_data/plugins/youtube/manifest.json
@@ -27,5 +27,6 @@
       "default": ["audio", "video"]
     }
   ],
-  "requirements": ["pytube", "moviepy"]
+  "requirements": ["pytube", "moviepy"],
+  "defaultConfig": {}
 }
